@@ -1,3 +1,9 @@
+2008-01-19  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dbus-settings.c
+	  src/applet-dbus-settings.h
+		- (applet_dbus_settings_system_get_by_dbus_path): new function
+
 2008-01-18  Dan Williams  <dcbw@redhat.com>
 
 	* src/utils/utils.c
